# function-calling-tools

./: README.md  pyproject.toml
doc/: how_to_call_functions_with_langchain.ipynb  how_to_call_functions_with_openai_api.ipynb
example/: fetch_current_datetime_in_timezone.ipynb  fetch_weather_info_using_piratewhether.ipynb
function_calling_tools/: ntp.py  pirateweather.py  redmine.py
